--- a/portal/package.json
+++ b/portal/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "chart.js": "^3.7.1",
     "chartjs-plugin-annotation": "^1.4.0",
+    "moment": "^2.29.1",
     "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
